--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,9 @@
-@import "components/dashboard";
+@import "./components/dashboard";
 
-body{
-  color: aqua;
-  background-color: lime;
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+body {
+
 }
