add track and style * protoTypes  react!!!

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,9 +1,4 @@
-@import "./components/dashboard";
-
-*, *:before, *:after {
-  box-sizing: border-box;
-}
-
-body {
-
-}
+@import "custom/variable";
+@import "custom/main";
+@import "components/dashboard";
+@import "components/track";
