--- a/styles/components/dashboard.scss
+++ b/styles/components/dashboard.scss
@@ -2,6 +2,19 @@
 
   &-content {
     display: flex;
+    flex-direction: row;
+
+    &-main, &-content-side {
+      margin: 0 $padding $padding 0;
+    }
+
+    &-main {
+      width: 70%;
+    }
+
+    &-side {
+      width: 30%;
+    }
   }
 
 }
