--- a/styles/custom/variable.scss
+++ b/styles/custom/variable.scss
@@ -8,3 +8,6 @@ $hyperlinkVisited: rgba(203, 203, 203, 0.5);
 $background: #262626;
 $backgroundSecondary: rgba(89, 89, 89, 0.25);
 $backgroundSecondaryHover: rgba(89, 89, 89, 1);
+
+$nav: #141414;
+$border: 1px solid #333;
