add playlist and minitrack

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,3 +3,5 @@
 @import "components/dashboard";
 @import "components/track";
 @import "components/player";
+@import "components/playlist.scss";
+@import "components/minitrack.scss";
