--- a/styles/components/playlist.scss
+++ b/styles/components/playlist.scss
@@ -2,7 +2,7 @@
   position: fixed;
   background: $nav;
   right: 10%;
-  bottom: 0;
+  bottom: $padding*3;
   width: $padding*18;
   height: $padding*15;
   border-top: $border;
