--- a/styles/components/track.scss
+++ b/styles/components/track.scss
@@ -11,7 +11,6 @@
 
   &-img {
     position: relative;
-    cursor: pointer;
     &-overlay {
       width: 100%;
       height: 80px;
@@ -29,10 +28,16 @@
         font-size: 30px;
         transform: translateX(-50%);
       }
-      &:hover .track-img-overlay {
-        opacity: 1;
+      i.fa-play ,i.fa-pause{
+        top:10px;
+      }
+      i.fa-list{
+        top:65px;
       }
     }
   }
 
+ &:hover .track-img-overlay {
+        opacity: 1;
+      }
 }
