--- a/styles/components/playlist.scss
+++ b/styles/components/playlist.scss
@@ -5,7 +5,7 @@
   bottom: $padding*3;
   width: $padding*18;
   height: $padding*15;
-  border-top: $border;
+  border: $border;
   overflow: scroll;
   opacity: 0;
   transition: height 0.2s;
