--- a/styles/components/minitrack.scss
+++ b/styles/components/minitrack.scss
@@ -34,5 +34,9 @@
                 }
             }
         }
-    
+
+        .active-track &-action{
+            opacity: 1;
+            margin: auto ($padding/2)
+        }
 }
