--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,7 @@
 @import "custom/variable";
 @import "custom/main";
 @import "components/dashboard";
+@import "components/header.scss";
 @import "components/track";
 @import "components/player";
 @import "components/playlist.scss";
