--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,7 +2,7 @@
 @import "custom/main";
 @import "components/dashboard";
 @import "components/header.scss";
-@import "components/followings.scss";
+@import "components/usermosaic.scss";
 @import "components/track";
 @import "components/player";
 @import "components/playlist.scss";
