--- a/styles/components/track.scss
+++ b/styles/components/track.scss
@@ -7,6 +7,18 @@
     width: 100%;
     height: 80px;
     padding: $padding/2;
+    position: relative;
+    &-waveform {
+      opacity: 0.2;
+      width: 95%;
+      height: 30%;
+      position: absolute;
+      top: $padding*2;
+      pointer-events: none;
+      transition: opacity 0.2s;
+      transition-timing-function: ease;
+    }
+
   }
 
   &-actions {
@@ -31,6 +43,9 @@
 
   &:hover .track-actions {
     opacity: 1;
-    margin: 0 ($padding/2) ;
+    margin: 0 ($padding/2);
+  }
+  &:hover .track-content-waveform {
+    opacity: 1;
   }
 }
