--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -7,11 +7,23 @@
     height: $padding*3;
     border-bottom: $border;
     z-index: 1;
+
     &-content{
         position: relative;
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
         height: 100%;
-        margin-left: 10%;
+        margin: 0 10%;
+        div{
+            margin: auto $padding;
+        }
+        i{
+            cursor:pointer;
+            font-size: 10px;
+            width: 20px;
+            &:hover{
+                color: $mainColor;
+            }
+        }
     }
 }
