--- a/styles/components/track.scss
+++ b/styles/components/track.scss
@@ -18,7 +18,19 @@
       transition: opacity 0.2s;
       transition-timing-function: ease;
     }
-
+    &-info{
+      opacity: 0.2;
+      width: 100%;
+      position: absolute;
+      bottom: 0;
+      left: $padding/2;
+      transition: opacity 0.2s;
+      transition-timing-function: ease;
+      display: flex;
+      &-item{
+        flex: 1;
+      }
+    }
   }
 
   &-actions {
@@ -46,6 +58,8 @@
     margin: 0 ($padding/2);
   }
   &:hover .track-content-waveform {
+    opacity: 1;
+  } &:hover .track-content-info {
     opacity: 1;
   }
 }
