--- a/styles/components/minitrack.scss
+++ b/styles/components/minitrack.scss
@@ -3,7 +3,7 @@
         border-bottom:$border;
         height: 40px;
         overflow: hidden;
-        &:hover &-action{
+        &:hover &-content-action{
             opacity: 1;
             margin: auto ($padding/2);
             
@@ -15,27 +15,28 @@
 
         &-content{
             width: 100%;
-            height: 20px;
             padding: $padding/2;
             background: $nav;
-           
-        }
+            position: relative;
+            display: flex;
+            &-action{
+                transition:all 0.2s;
+                transition-timing-function: ease;
+                opacity: 0;
+                display: flex;
 
-        &-action{
-            transition:all 0.2s;
-            transition-timing-function: ease;
-            opacity: 0;
-            
-            i{
-                cursor:pointer;
-                font-size: 15px;
-                &:hover{
-                    color:$mainColor;
+                i{
+                    margin: 0;
+                    cursor:pointer;
+                    font-size: 15px;
+                    &:hover{
+                        color:$mainColor;
+                     }
                 }
-            }
-        }
+            }  
+         }
 
-        .active-track &-action{
+        .active-track &-content-action{
             opacity: 1;
             margin: auto ($padding/2)
         }
