--- a/styles/components/playlist.scss
+++ b/styles/components/playlist.scss
@@ -23,7 +23,7 @@
     // margin-left: 25%;
     div {
 
-      margin: auto $padding;
+         margin: auto ($padding/4) ($padding/4) ;
       i{
         cursor:pointer;
         font-size: 20px;
