--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,6 +3,7 @@
 @import "components/dashboard";
 @import "components/header.scss";
 @import "components/usermosaic.scss";
+@import "components/loadingSpinner.scss";
 @import "components/track";
 @import "components/player";
 @import "components/playlist.scss";
