--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -1,29 +1,40 @@
-.header{
-    background: $nav;
-    position: fixed;
-    right: 0;
-    top: 0;
-    width: 100%;
-    height: $padding*3;
-    border-bottom: $border;
-    z-index: 1;
+.header {
+  background: $nav;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100%;
+  height: $padding*3;
+  border-bottom: $border;
+  z-index: 1;
 
-    &-content{
-        position: relative;
-        display: flex;
-        justify-content: space-between;
-        height: 100%;
-        margin: 0 10%;
-        div{
-            margin: auto $padding;
-        }
-        i{
-            cursor:pointer;
-            font-size: 10px;
-            width: 20px;
-            &:hover{
-                color: $mainColor;
-            }
-        }
+  &-content {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+    margin: 0 ;
+    align-items: center;
+    .menu-item {
+      font-size: 13px;
+      text-transform: uppercase;
+      margin: 0 ($padding/2);
+      padding: ($padding/8) 0;
+      &-selected, &:hover {
+        border-bottom: 1px solid $mainColor;
+      }
     }
+
+    div {
+      margin: auto $padding;
+    }
+    i {
+      cursor: pointer;
+      font-size: 10px;
+      width: 20px;
+      &:hover {
+        color: $mainColor;
+      }
+    }
+  }
 }
