--- a/styles/components/minitrack.scss
+++ b/styles/components/minitrack.scss
@@ -1,6 +1,6 @@
 .mini-track{
         display: flex; 
-        border-bottom:$border;
+        border-bottom:$darkBorder;
         height: 40px;
         overflow: hidden;
         &:hover &-content-action{
