--- a/styles/components/player.scss
+++ b/styles/components/player.scss
@@ -4,7 +4,7 @@
   right: 0;
   bottom: 0;
   width: 100%;
-  border-top: $border;
+  border-top: $darkBorder;
   height: 0;
 
   transition: height 0.2s;
