--- a/styles/components/track.scss
+++ b/styles/components/track.scss
@@ -3,31 +3,31 @@
   display: flex;
   margin: ($padding/2) 0;
   background: $backgroundSecondary;
+  border:$border;
   &-content {
     width: 100%;
     height: 80px;
-    padding: $padding/2;
+    padding: ($padding/2);
+    display: flex;
+    flex-direction: column;
     position: relative;
+    justify-content: space-between;
     &-waveform {
       opacity: 0.2;
-      width: 95%;
-      height: 30%;
-      position: absolute;
-      top: $padding*2;
       pointer-events: none;
-      transition: opacity 0.2s;
-      transition-timing-function: ease;
+      margin: ($padding/8) 0;
+
+      &-json {
+        width: 90%;
+        height: 40px;
+      }
+
     }
-    &-info{
-      opacity: 0.2;
+    &-info {
       width: 100%;
-      position: absolute;
-      bottom: 0;
       left: $padding/2;
-      transition: opacity 0.2s;
-      transition-timing-function: ease;
       display: flex;
-      &-item{
+      &-item {
         flex: 1;
       }
     }
@@ -59,7 +59,8 @@
   }
   &:hover .track-content-waveform {
     opacity: 1;
-  } &:hover .track-content-info {
+  }
+  &:hover .track-content-info {
     opacity: 1;
   }
 }
