--- a/styles/custom/variable.scss
+++ b/styles/custom/variable.scss
@@ -1,13 +1,18 @@
 $padding: 20px;
 
 $mainColor: #A135B2;
-$hyperlinkHover: rgba(203, 203, 203, 1);
-$hyperlinkActive: rgba(203, 203, 203, 0.5);
-$hyperlinkVisited: rgba(203, 203, 203, 0.5);
+$fontColor: #8c8c8c;
+$hyperlinkHover: rgba(140, 140, 140, .8);
+$hyperlinkActive: rgba(140, 140, 140, .4);
+$hyperlinkVisited: rgba(140, 140, 140, .4);
 
-$background: #262626;
-$backgroundSecondary: rgba(89, 89, 89, 0.25);
+
+$background: #CECECE;
+$backgroundSecondary: #EFEFEF;
 $backgroundSecondaryHover: rgba(89, 89, 89, 1);
+
+$border: 1px solid #8C8C8C;
 
 $nav: #141414;
 $border: 1px solid #333;
+$darkBorder: 1px solid #3A3A3A;
