--- a/styles/components/playlist.scss
+++ b/styles/components/playlist.scss
@@ -22,14 +22,13 @@
     height: 100%;
     // margin-left: 25%;
     div {
-
-         margin: auto ($padding/4) ($padding/4) ;
-      i{
-        cursor:pointer;
+      margin: 0 ($padding/4) ($padding/4) ($padding/4);
+      i {
+        cursor: pointer;
         font-size: 20px;
         width: 20px;
-        &:hover{
-          color:$mainColor;
+        &:hover {
+          color: $mainColor;
         }
       }
     }
