--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,6 +5,7 @@
 @import "components/itemList.scss";
 @import "components/item";
 @import "components/loadingSpinner.scss";
+@import "components/actions";
 @import "components/track";
 @import "components/player";
 @import "components/playlist.scss";
