--- a/styles/custom/variable.scss
+++ b/styles/custom/variable.scss
@@ -1,18 +1,18 @@
 $padding: 20px;
 
 $mainColor: #A135B2;
-$fontColor: #8c8c8c;
+$fontColor: #777777;
 $hyperlinkHover: rgba(140, 140, 140, .8);
 $hyperlinkActive: rgba(140, 140, 140, .4);
 $hyperlinkVisited: rgba(140, 140, 140, .4);
 
 
-$background: #CECECE;
-$backgroundSecondary: #EFEFEF;
+$background: #1c1c1c;
+$backgroundSecondary: #262626;
 $backgroundSecondaryHover: rgba(89, 89, 89, 1);
 
 $border: 1px solid #8C8C8C;
 
 $nav: #141414;
-$border: 1px solid #333;
+$border: 1px solid #3A3A3A;
 $darkBorder: 1px solid #3A3A3A;
