--- a/styles/components/track.scss
+++ b/styles/components/track.scss
@@ -1,4 +1,3 @@
-
 .track {
   display: flex;
   margin: ($padding/2) 0;
@@ -31,7 +30,6 @@
         width: 90%;
         height: 20px;
       }
-
     }
     &-info {
       width: 100%;
@@ -42,7 +40,6 @@
       }
     }
   }
-
   &-actions {
     position: relative;
     display: flex;
@@ -51,7 +48,6 @@
     opacity: 0;
     margin: 0;
     transition: all 0.2s;
-
     &-item {
       i {
         font-size: 20px;
@@ -62,7 +58,6 @@
       }
     }
   }
-
   &:hover .track-actions {
     opacity: 1;
     margin: 0 ($padding/2);
@@ -71,6 +66,9 @@
     opacity: 1;
   }
   &:hover .track-content-info {
+    opacity: 1;
+  }
+  &.active .track-actions {
     opacity: 1;
   }
 }
