--- a/styles/components/player.scss
+++ b/styles/components/player.scss
@@ -29,7 +29,7 @@
         &:hover {
           color: $mainColor;
         }
-        &.active {
+        &.is-favorite {
           color: $mainColor;
         }
       }
