feat(follow):allow to follow/unfollow

--- a/styles/components/actions.scss
+++ b/styles/components/actions.scss
@@ -12,8 +12,10 @@
     &:hover {
       color: $mainColor;
     }
+    &.is-active {
+      color: $mainColor;
+    }
   }
-
   &-visible {
     opacity: 1;
   }
