--- a/styles/components/item.scss
+++ b/styles/components/item.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
     justify-content: space-between;
     flex: 2;
-
+    position: relative;
     &-name {
       overflow: hidden;
       font-size: 14px;
@@ -17,20 +17,20 @@
       text-overflow: ellipsis;
       white-space: nowrap;
     }
-
     &-info {
-      width: 100%;
+      flex: 1;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-
       &-item {
         flex: 1;
       }
     }
   }
-
   &:hover .action {
     opacity: 1;
+  }
+  &.is-active {
+    color: $mainColor;
   }
 }
