refactor(ItemList): list

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,7 +2,7 @@
 @import "custom/main";
 @import "components/dashboard";
 @import "components/header.scss";
-@import "components/itemList.scss";
+@import "components/list.scss";
 @import "components/item";
 @import "components/loadingSpinner.scss";
 @import "components/actions";
