feat(infolist):new component

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,6 +3,7 @@
 @import "components/dashboard";
 @import "components/header.scss";
 @import "components/list.scss";
+@import "components/infolist.scss";
 @import "components/item";
 @import "components/loadingSpinner.scss";
 @import "components/actions";
