feat(Permalink):new component

--- a/styles/components/item.scss
+++ b/styles/components/item.scss
@@ -10,7 +10,7 @@
     justify-content: space-between;
     flex: 2;
     position: relative;
-    &-name {
+    　ａ {
       overflow: hidden;
       font-size: 14px;
       max-width: 130px;
