refactor(*):stateless function component

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -10,4 +10,4 @@
 @import "components/track";
 @import "components/player";
 @import "components/playlist.scss";
-@import "components/minitrack.scss";
+@import "components/playlisttrack.scss";
