--- a/styles/components/dashboard.scss
+++ b/styles/components/dashboard.scss
@@ -1,20 +1,14 @@
 .dashboard {
-
-  &-content {
-    display: flex;
-    flex-direction: row;
-
-    &-main, &-content-side {
-      margin: 0 $padding $padding 0;
-    }
-
-    &-main {
-      width: 70%;
-    }
-
-    &-side {
-      width: 30%;
-    }
+  display: flex;
+  flex-direction: row;
+  &-main,
+  &-content-side {
+    margin: 0 $padding $padding 0;
   }
-
+  &-main {
+    width: 70%;
+  }
+  &-side {
+    width: 30%;
+  }
 }
