feat(comment):add comments(yet)

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,9 +5,10 @@
 @import "components/list.scss";
 @import "components/infolist.scss";
 @import "components/item";
+@import "components/comment";
 @import "components/loadingSpinner.scss";
 @import "components/actions";
-@import "components/track";
+@import "components/stream";
 @import "components/player";
 @import "components/playlist.scss";
 @import "components/playlisttrack.scss";
