--- a/styles/components/playlisttrack.scss
+++ b/styles/components/playlisttrack.scss
@@ -3,6 +3,7 @@
   border-bottom: $darkBorder;
   height: 40px;
   overflow: hidden;
+  flex:1;
   &:hover .action {
     opacity: 1;
     margin: auto ($padding/2);
@@ -18,6 +19,9 @@
     position: relative;
     display: flex;
     flex-grow: 2;
+    &-info{
+      flex:6;
+    }
     &-name {
       display: flex;
       align-items: center;
