--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,6 +6,7 @@
 @import "components/infolist.scss";
 @import "components/item";
 @import "components/comment";
+@import "components/actionArtWork.scss";
 @import "components/loadingSpinner.scss";
 @import "components/actions";
 @import "components/stream";
