--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,15 +1,18 @@
 @import "custom/variable";
 @import "custom/main";
 @import "components/dashboard";
-@import "components/header.scss";
-@import "components/list.scss";
-@import "components/infolist.scss";
+@import "components/header";
+@import "components/list";
+@import "components/infolist";
 @import "components/item";
 @import "components/comment";
-@import "components/actionArtWork.scss";
-@import "components/loadingSpinner.scss";
+@import "components/buttonMore";
+@import "components/buttonInline";
+@import "components/buttonGhost";
+@import "components/artworkAction";
+@import "components/loadingSpinner";
 @import "components/actions";
 @import "components/stream";
 @import "components/player";
-@import "components/playlist.scss";
-@import "components/playlisttrack.scss";
+@import "components/playlist";
+@import "components/playlisttrack";
