--- a/styles/index.scss
+++ b/styles/index.scss
@@ -10,6 +10,7 @@
 @import "components/buttonInline";
 @import "components/buttonGhost";
 @import "components/artworkAction";
+@import "components/trackActions";
 @import "components/loadingSpinner";
 @import "components/actions";
 @import "components/stream";
