feat(stream): reposts

--- a/styles/components/actions.scss
+++ b/styles/components/actions.scss
@@ -5,6 +5,7 @@
   transition-timing-function: ease;
   flex: 1;
   align-items: center;
+  justify-content: flex-end;
   i {
     margin: 0 ($padding/4);
     cursor: pointer;
