--- a/styles/components/stream.scss
+++ b/styles/components/stream.scss
@@ -17,7 +17,7 @@
       position: absolute;
       top: 0;
       left: 60px;
-      width: calc(100%-60px);
+      width: calc(100%- 60px);
       height: 100%;
       pointer-events: none;
       padding: ($padding/8) 0;
