feat(filter):filter by duration

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -17,3 +17,7 @@
 @import "components/player";
 @import "components/playlist";
 @import "components/playlisttrack";
+@import "components/buttonActive";
+@import "components/filterDuration";
+@import "components/streamInteractions";
+
