--- a/styles/components/actions.scss
+++ b/styles/components/actions.scss
@@ -9,7 +9,7 @@
   i {
     margin: 0 ($padding/4);
     cursor: pointer;
-    font-size: 16px;
+    font-size: $mediumIcon;
     &:hover {
       color: $mainColor;
     }
