--- a/styles/components/player.scss
+++ b/styles/components/player.scss
@@ -22,12 +22,12 @@
       cursor: pointer;
     }
     &-action {
-      font-size: 20px;
+      font-size: $bigIcon;
       &:hover {
         color: $mainColor;
       }
       i {
-        width: 20px;
+        width: $bigIcon;
         &.is-favorite {
           color: $mainColor;
         }
