--- a/styles/index.scss
+++ b/styles/index.scss
@@ -19,4 +19,5 @@
 @import "components/playlisttrack";
 @import "components/buttonActive";
 @import "components/streamInteractions";
+@import "components/inputMenu";
 
