feat(bug) : fixed

--- a/styles/components/buttonGhost.scss
+++ b/styles/components/buttonGhost.scss
@@ -1,9 +1,9 @@
 .button-ghost{
-  display: inline-block;
+  display: inline-flex;
   border:1px solid $mainColor;
   height: $padding;
   line-height: $padding;
-  color:$mainColor;
+  color: $mainColor;
   border-radius: 5px;
   background-clip: padding-box;
   padding: 0.5em 1.5em;
@@ -11,7 +11,7 @@
   transition: all 0.2s ease;
   background: transparent;
   cursor:pointer;
-
+  box-sizing: content-box;
   &-small{
     height: $padding/2;
     line-height: $padding/2;
