feat(shuffled) : add shuffle functionality

--- a/styles/components/player.scss
+++ b/styles/components/player.scss
@@ -32,6 +32,9 @@
           color: $mainColor;
         }
       }
+      .active{
+        color: $mainColor;
+      }
     }
     div {
       margin: auto $padding;
