--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,5 @@
 @import "custom/variable";
+@import "custom/inputRange";
 @import "custom/main";
 @import "components/dashboard";
 @import "components/header";
@@ -20,4 +21,5 @@
 @import "components/buttonActive";
 @import "components/streamInteractions";
 @import "components/inputMenu";
+@import "components/volume";
 
